--- a/WEB/HTML/Ex12_Form_Input.html
+++ b/WEB/HTML/Ex12_Form_Input.html
@@ -40,9 +40,57 @@
                 sportsarr[1] = "B"
                 sportsarr[2] = "C"
             -->
+            <fieldset>
+                <legend> select 태그 (단일 선택(년월일))</legend>
+                <select name = "year">
+                    <option value="2022">2022년</option>
+                    <option value="2021">2021년</option>
+                    <option value="2020">2020년</option>
+                </select>
+                <!--
+                    register.jsp?year=2022 서버로 전송
+                    서버에서 받는 데이터는 문자열 데이터
+                    int year = Integer.parseInt(request.getParameter("year"));
+
+                -->
+
+            </fieldset>
+
+            <fieldset>
+                <legend>라디오버튼(단일선택 : 남, 여) : name 같으면 하나의 그룹</legend>
+                남<input type="radio" name="gender" value="1"><br>
+
+                여<input type="radio" name="gender" value="2"><br>
+                <br>
+
+                대<input type="radio" name="product" value="1"><br>
+                중<input type="radio" name="product" value="2"><br>
+                소<input type="radio" name="product" value="3"><br>
+
+            </fieldset>
+
+            <fieldset>
+                <legend>기타 등등</legend>
+                1. 화면에 출력되지 않음 (소스는 가지고 있음)
+                <input type="hidden" value = "1000" name = "데이터">
+                <hr>
+                2. 파일 업로드(클라이언트 파일 선택 가능
+                <input type="file" name="imgup">
+                <hr>
+                3. 게시판 글 쓰기 (여러줄) : 초기 화면의 크기 (rows, cols-> 몇줄에 몇칸)
+                <textarea rows="10" cols="50">기본크기</textarea>
+                <hr>
+                4. 각종 버튼들
+                <input type="button" value="나 눌러봐" onclick="alert('쉬는시간')">
+                <hr>
+                <!--
+                    type = "image"
+                    type = "submit"
+                    type = "reset"
+                -->
+
+            </fieldset>
+
         </form>
-
-
-
     </body>
 </html>
