--- a/WEB/HTML/test.html
+++ b/WEB/HTML/test.html
@@ -65,6 +65,8 @@
    <input type="radio" name="animal">Dog </input>
    
    <input type="radio" name="animal">Cat</input>
+   <br>
+   <input type="submit" value="Submit">
 
 </div>
    
@@ -73,7 +75,7 @@
 <div class="clear"></div>
 
 <footer>
-   footer
+
 </footer>
 
 
