--- a/WEB/22.10.12_DAY35/Ex06_Script_Function.html
+++ b/WEB/22.10.12_DAY35/Ex06_Script_Function.html
@@ -5,31 +5,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="iconfavicon.ico" rel="shortcut icon" type="image/x-icon">
-    <script type="text/javascript">
-        /*
-        < JAVA >
-        public void print(){}
-        public String print() {return ""}
-        public int print(int num, int num2){return num + num2}
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <link rel="stylesheet" href="">
 
-        < JS >
-        function 함수명 () {}
-        void(x), return type(x)
+    <script>
+        /*
+            JAVA
+            public void print(){}
+            public String print(){retunr ""}
+            public int print(int num, int num2) {return num + num2}
+
+            JavaScript
+            function 함수명(){}
+            void(x), return type(x)
         */
-        function callConfirm(){ //사용자 정의함수
-            if(window.confirm("삭제하시겠습니까")){ //confirm() 내장함수 return true or false
+       function callConfirm(){//사용자 정의 함수
+            if(window.confirm("삭제하시겠습니까?")){ //confirm() 내장함수 return true or false
                 alert("네");
             } else {
-                alert("아니오")
+                alert("아니요");
             }
-         }
+       }
+
+
+       //팝업창 (div 만들어서 ...)
+       //전통적인 방법
+       //window.open(URL, name, specs, replace)
+       function showPopup(){
+            window.open("Ex06_popup.html","zipcode","width=200,height=200"); //내장함수
+       }
+
+       function myFunc(){
+            swal("Here's the title!", "...and here's the text!");
+            let popupwindow = window.open("Ex06_popup.html","zipcode","width=200,height=200");
+            //popupwindow 가 팝업창이에요
+            popupwindow.document.write("<p>this is zipcode window</p>");
+            //새 창에 대한 제어가 가능하다...
+       }
+
+       //JAVA: public void goUrlTime(String url){}
+       function goUrlTime(url){
+            window.setTimeout("location.href='" + url + "'", 3000);
+            //setTimeout 내장함수
+            //3초가 지나면 ... "location.href='"+ url + "'" 실행해라
+            //location.href 이동
+            //location.href'httl://www.daum.net'
+       }
+
+       //JAVA: public int myFunc(int i, int j, int k) {return i+j+k;}
+       function myFunc(i,j,k){
+            return i+j+k;
+       }
+
+       let result = myFunc(10,20,30);
+       console.log("result: " + result);
+
+       //javascript 익명함수
+       //이름이 없어요 (한번만 쓰겠다 : 재사용하지 않을꺼야)
+       //function 이름 {}
+
+       //원칙 : changeColor=function();
+       changeColor = function(){ // 함수를 만드는 방법 중 한가지
+            document.bgColor="silver";
+            document.fgColor="red";
+       }
+       
+
+
     </script>
 </head>
 <body>
-    <hr3>내장함수, 사용자 정의 함수</hr3>
-    <button onclick="">클릭 사건 발생(함수(행위))호출</button>
-    <br>
-    
+        <h3>내장함수, 사용자 정의 함수</h3>
+        <button onclick="callConfirm()">클릭 사건 발생(함수(행위) 호출)</button>
+        <br>
+        <button onclick="showPopup()">팝업창</button>
+        <br>
+        <button onclick="myFunc()">팝업object</button>
+        <br>
+        <button onclick="goUrlTime('http://www.daum.net')">3초후 이동</button>
+        <br>
+        <button onclick="changeColor()">익명함수 호출</button>
 </body>
 </html>
