--- a/Team2_Tasks/API_Web/API_Web.html
+++ b/Team2_Tasks/API_Web/API_Web.html
@@ -11,7 +11,9 @@
 <body>
 
     <header>
-        <h1>HTML API</h1>
+        <h1> Team2 HTML API<br>
+                손정원
+        </h1>
        
     </header>
 
@@ -19,9 +21,9 @@
           <!-- ***************************************** 현재위치 생성 ******************************************** -->
         <section> 
             <h3>GeoLocation</h3> <br>
-            <img src="olafpng.png" alt="olaf" width="300px" height="200px" style="margin-top: 80px; margin-left: 20px;">
+            <img src="mynose.png" alt="olaf" width="300px" height="370px" style="margin-top: 50px; margin-left: 80px; margin-bottom: 100px;">
             <img src="bb.png" alt="bb" width="00px" height="300px" style="margin-bottom: 40px; margin-left: 20px;">
-            <div id="map" style="width:600px;height:400px; float: right; margin-right:100px ;"></div>
+            <div id="map" style="width:600px;height:400px; float: right; margin-right:150px ;"></div>
 
 	          <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7b6d49f208bc78af3be5ae7272a2b6ab"></script>
 
@@ -517,8 +519,8 @@
                 }
                 </script>
 
-                <p><button onclick="clickCounter()" type="button" style="margin-left: 70px;">
-                    <img src="hugme-removebg-preview.png" alt="hug me" width="300" height="400" style="margin: 0 auto;">
+                <p><button onclick="clickCounter()" type="button" style="margin-left: 430px;">
+                    <img src="hugme-removebg-preview.png" alt="hug me" width="300" height="400" style="margin:auto;">
                 </button></p>
                 <p id="result"></p>
                 </section>
