--- a/WEB/22.10.14_DAY37/Ex18_Script_DOM.html
+++ b/WEB/22.10.14_DAY37/Ex18_Script_DOM.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <script>
         /*
-        onload 이벤트가 발생하는 시점 : body 태그 안에 모든 요소가 브라주어 메묄에 Loading >> DOM 생성
+        onload 이벤트가 발생하는 시점 : body 태그 안에 모든 요소가 브라우저 메모리에 Loading >> DOM 생성
         function call();
         1. <body onload="call()">
         2. window.onload="call()"
@@ -32,7 +32,7 @@
             let header = document.createElement("h1");
             //<h1></h1>
 
-            let textnode = document.createTextNode("hello");
+            let textnode1 = document.createTextNode("hello");
             //hello
 
             header.appendChild(textnode);
