--- a/WEB/22.10.14_DAY37/Ex23_Script_DOM_Event.html
+++ b/WEB/22.10.14_DAY37/Ex23_Script_DOM_Event.html
@@ -6,14 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="text/javascript">
-         let img = document.createElement("txtrow");
-         txtrow.setAttribute()
-
-
-         function addRow(){
-            
+         document.getElementById('b1').onclick = function(){
+            let row = document.getElementById('txtrow').value;
+            let col = document.getElementById('txtcolumn')
          }
-
     </script>
 </head>
 <body>
