--- a/Team2_Tasks/BootStrap/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/Team2_Tasks/BootStrap/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -48,7 +48,8 @@
                             자기소개 간단히 해주기~
                             !
                         </p>
-                        <a class="btn btn-dark btn-xl" href="#services">What We Offer</a>
+                        <a class="btn btn-dark btn-xl" href="#services">Things I Like 
+                        </a>
                     </div>
                 </div>
             </div>
