--- a/WEB/22.10.17_DAY38/Ex37_Script_Object.html
+++ b/WEB/22.10.17_DAY38/Ex37_Script_Object.html
@@ -50,7 +50,7 @@
 
         인스턴스마다 공통된 메서드를 공유해서 사용하는 장점 
 
-                            Jquery 도 prototype 방식으로 설계
+                           Jquery 도 prototype 방식으로 설계
 
         function 클래스이름() {
 
@@ -69,8 +69,6 @@
 
         }
 
-        ​
-
         var 인스턴스 = new 클래스이름(); 
 
         var carObj = new Car();
@@ -79,7 +77,6 @@
 
         var carObj3 = new Car();
 
-        ​
 
         2. 함수 방식 : 간단한 클래스 제작 시 사용 
 
@@ -89,8 +86,6 @@
 
         ** 함수 :   function car(){}
 
-        ​
-
         function 클래스이름() {
 
         this.프로퍼티1 = 초기값;
@@ -99,19 +94,12 @@
 
         this.메서드1 = function() {
 
-        ​
-
         }
 
         this.메서드2 = function() {
 
-        ​
-
         }
-
         }
-
-        ​
 
         var 인스턴스 = new 클래스이름(); 
 
@@ -122,17 +110,6 @@
         var carObj3 = new Car();
 
         ​
-
-        ​
-
-        ​
-
-        ​
-
-        ​
-
-        ​
-
             *****************
 
         3. 리터럴 방식 : 
@@ -144,9 +121,6 @@
             (초보자에게도 중요 ^^)
             {"a" : 데이터}
         ​
-
-        ​
-
         4. ECMA6 버전부터 : class 키워드 제공
 
         class Person {
@@ -183,13 +157,11 @@
         var product2 = {제품명:'사과',년도:'2018',원산지:'대구'};
 
         var 인스턴스 ={
-
         프로퍼티:초기값,
         프로퍼티:초기값,
         .....
         메서드:function(){},
-        메서드:function(){}....
-
+        메서드:function(){}...
         }
 
         리터럴 방식 > 선언과 동시에 인스턴스 자동 생성
@@ -198,7 +170,6 @@
         * 프로퍼티와 메서드만 정의 가능
         * 단점 : 객체 하나 생성(재사용성 없다) 
         * 접근방법 : 인스턴스이름.자원 >> product2.제품명 
-
         ​*/
 
         //class Product {public String 제품명 = "사과"}
