--- a/Team2_Task/BootStrap/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/Team2_Task/BootStrap/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -24,8 +24,8 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand"><a href="#page-top">Welcome to Jenna</a></li>
                 <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
-                <li class="sidebar-nav-item"><a href="#about">Me</a></li>
-                <li class="sidebar-nav-item"><a href="#services">Stuff I made</a></li>
+                <li class="sidebar-nav-item"><a href="#about">I am</a></li>
+                <!-- <li class="sidebar-nav-item"><a href="#services">Stuff I made</a></li> -->
                 <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
                 <li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
             </ul>
@@ -43,12 +43,18 @@
             <div class="container px-4 px-lg-5 text-center">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-10">
-                        <h2>Me </h2>
+                        <h2>I am </h2>
                         <p class="lead mb-5">
-                            자기소개 간단히 해주기~
-                            !
+                            born in 16.03.2000 in Seoul, South Korea 🇰🇷 <br>
+                            learning JAVA, JAVASCRIPT, HTML, CSS, SQL<br>
+                            fond of 💚 🌰 🌙 ✈️ 🌼 👩‍🍳<br><br>
+                            always doing my best!
+                            
+
+
+
                         </p>
-                        <a class="btn btn-dark btn-xl" href="#services">Things I Like 
+                        <a class="btn btn-dark btn-xl" href="#services">My personality 
                         </a>
                     </div>
                 </div>
@@ -58,33 +64,35 @@
         <section class="content-section bg-primary text-white text-center" id="services">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
-                    <h3 class="text-secondary mb-0">Services</h3>
-                    <h2 class="mb-5">What We Offer</h2>
+                    <h3 class="text-secondary mb-0">These are ...</h3>
+                    <h2 class="mb-5">My personality</h2>
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
-                        <h4><strong>Responsive</strong></h4>
-                        <p class="text-faded mb-0">Looks great on any screen size!</p>
+                        <h4><strong>Easy going</strong></h4>
+                        <p class="text-faded mb-0">사람들과 쉽게 어울리며 협업합니다!</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
-                        <h4><strong>Redesigned</strong></h4>
-                        <p class="text-faded mb-0">Freshly redesigned for Bootstrap 5.</p>
+                        <h4><strong>Ambitious</strong></h4>
+                        <p class="text-faded mb-0">야심과 욕심을 가진 개발자입니다.</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-like"></i></span>
-                        <h4><strong>Favorited</strong></h4>
+                        <h4><strong>Calm</strong></h4>
                         <p class="text-faded mb-0">
-                            Millions of users
-                            <i class="fas fa-heart"></i>
-                            Start Bootstrap!
+                            어떤 상황에서도 침착하게!
+                            <!-- <i class="fas fa-heart"></i>
+                            Start Bootstrap! -->
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
-                        <h4><strong>Question</strong></h4>
-                        <p class="text-faded mb-0">I mustache you a question...</p>
+                        <h4><strong>Brave</strong></h4>
+                        <p class="text-faded mb-0">새로운 분야와 지식을 접하는데에 <br>
+                            두려움이 없습니다!
+                        </p>
                     </div>
                 </div>
             </div>
@@ -101,8 +109,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Stationary</div>
-                                    <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                                    <div class="h2">HTML API</div>
+                                    <p class="mb-0">GeoLocation & Drag/Drop & <br> Local Storage</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
@@ -112,8 +120,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Ice Cream</div>
-                                    <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                                    <div class="h2">Coming Soon!</div>
+                                    <p class="mb-0">Team2 Second Project</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
@@ -123,7 +131,7 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Strawberries</div>
+                                    <div class="h2">Coming Soon!</div>
                                     <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
                                 </div>
                             </div>
@@ -134,7 +142,7 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">Workspace</div>
+                                    <div class="h2">Coming Soon!</div>
                                     <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
                                 </div>
                             </div>
@@ -162,6 +170,9 @@
         <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-facebook"></i></a>
+                    </li>
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-twitter"></i></a>
                     </li>
