--- a/Team2_Task/BootStrap/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/Team2_Task/BootStrap/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -69,12 +69,12 @@
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-smartphone"></i></span>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-heart"></i></span>
                         <h4><strong>Easy going</strong></h4>
                         <p class="text-faded mb-0">사람들과 쉽게 어울리며 협업합니다!</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-pencil"></i></span>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-heart"></i></span>
                         <h4><strong>Ambitious</strong></h4>
                         <p class="text-faded mb-0">야심과 욕심을 가진 개발자입니다.</p>
                     </div>
