--- a/Team2_Task/BootStrap/startbootstrap-stylish-portfolio-gh-pages/index.html
+++ b/Team2_Task/BootStrap/startbootstrap-stylish-portfolio-gh-pages/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-heart"></i></span>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-people"></i></span>
                         <h4><strong>Easy going</strong></h4>
                         <p class="text-faded mb-0">사람들과 쉽게 어울리며 협업합니다!</p>
                     </div>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://hiimjenna.github.io/Welcome_to_Jenna/">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">HTML API</div>
@@ -155,7 +155,7 @@
         <!-- Call to Action-->
         <section class="content-section bg-primary text-white">
             <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">The buttons below are impossible to resist...</h2>
+                <h2 class="mb-4">DO NOT CLICK THOSE BUTTONS!!</h2>
                 <a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
                 <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
             </div>
@@ -171,13 +171,12 @@
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-facebook"></i></a>
+                        <a class="social-link rounded-circle text-white mr-3" href="https://www.instagram.com/j1___.h/"><i class="icon-social-instagram"></i></a>
+                    </li>
+
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-twitter"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
+                        <a class="social-link rounded-circle text-white" href="https://github.com/HiImJenna"><i class="icon-social-github"></i></a>
                     </li>
                 </ul>
                 <p class="text-muted small mb-0">Copyright &copy; Your Website 2022</p>
