--- a/WEB/22.10.19_DAY40/Ex42_Arrow_Function.html
+++ b/WEB/22.10.19_DAY40/Ex42_Arrow_Function.html
@@ -1,124 +1,148 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<title>Insert title here</title>
 </head>
 <body>
-    <p id = "demo"></p>
-    <p id = "demo2"></p>
-
-    <script type="text/javascript">
-       // https://www.w3schools.com/js/js_arrow_function.asp
-       //일반함수
-       //function foo() { }
-
-       //익명함수
-       let foo = function() {
-        console.log("foo...");
-       }
-       foo();
-
-       //ES6(2015) .. 함수의 줄임 표현 .. Arrow Function 이름으로
-       //매개변수 없는 함수 구현
-       let bar = () => console.log("bar ..");
-       bar();
-
-       //매개변수 1개
-       //let foo2= function(x) {return x}
-       let foo2 = x => x;
-       let data = foo2(100);
-       console.log(data);
-
-       let hello;
-       //hello = (val) => "hello" + val;
-
-       hello = val => "hello" + val;
-       let v = hello("aaaa");
-       console.log(v);
-       document.getElementById("demo").innerHTML = hello("방가방가");
-
-       //매개변수가 2개 이상인 경우
-       //function call(a, b){}
-       let foo3 = (a,b) =>{return a + b};
-       let v2 = foo3(10,20);
-       console.log(v2);
-
-       //함수에 여러개의 논리가 필요하다면 {구현}
-       let foo4 = (a,b) => {let c = 100; return a+b+c};
-       let v3 = foo4(100,200);
-       console.log(v3);
-
-       //함수 객체 return >> { json }
-       let foo5 = () => ({a:1, b:2, c:3});
-       let vobj = foo5();
-       console.log(vobj);
-
-       //즉시 실행 함수 (암기)
-       //jquery 활용
-       (
-        function(){
-            console.log("즉시 실행 함수 ...");
-            //함수는 호출에 의해서 실행
-        } ()
-       );
-       //위 코드를 화살표 표현식으로 바꾸어 보세요
-       (
-        ( )=> {console.log("즉시 실행 함수 ...")}
-        //함수는 호출에 의해서 실행
-       ) ();
-
-
-       /*
-     암기!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-     1. for(let i = 0; i < 10; ++i) {}
-     2. for(let index in Array) { Array[index] }
-     2.1 for(let value of Array) { value }
-
-     객체도 (json) 배열 (JAVA : Map)
-     JSON : {a : 1, b : 2, c : 3} >> for 문 사용 가능
-     3. for(let key in Object) { key }
-     3.1 객체 접근 : let obj = {a:1} >> obj.a >> 1
-
-     // 추가적으로...
-     // Array.isArray()
-     4. Array.forEach(function(value, index, array){})
-     5. Array.map()
-    */
-
-    function myFunc() {
-      let data = ["A", "B", "C", "D"];
-      let x = document.getElementById("demo2");
-      x.innerHTML = Array.isArray(data);
-    }
-    // 함수 호출
-    myFunc(); // true!
-
-    let txt = "";
-    let numbers = [45, 4, 9, 16, 25];
-    // array.forEach(function(currentValue, index, arr), thisValue)
-
-    //니가 가지고 있는 배열의 개수만큼 반복할거야
-    //호출 되었을 때 PARAMETER를 통해서 정보 얻음
-    //array.forEach(function(curentValue, index, arr), thisValue)
-    function myFunc2(value, index, array) {
-        txt = "(" + value + ")" + "[" + index + "]" + "[" + array + "]";
-        console.log(txt);
-    }
-
-    numbers.forEach(myFunc2) //callback, 재귀
-    numbers.forEach(myFunc3())
-    
-    //let numbers = [45,4,9,16,25];
-    //https://www.w3schools.com/jsref/jsref_map.asp
-
-    function myFunc3(){
-        console.log()
-    }
-
-
-    </script>
+	<p id="demo"></p>
+	<p id="demo2"></p>
 </body>
+	<script type="text/javascript">
+	//https://www.w3schools.com/js/js_arrow_function.asp
+	//일반함수
+	//function foo(){}
+	
+	//익명함수
+	let foo = function(){
+		console.log("foo....");
+	}
+	foo();
+	
+	//ES6(2015) ..함수의 줄임 표현 ...Arrow Function 이름으로 
+	//매개변수가 없는 ...함수 구현
+	let bar = () => console.log("bar....");
+	bar();
+	
+	//매개변수 1개  return 함수
+	//let foo2 = function(x) { return x}
+	let foo2 = x => x;
+	let data = foo2(100);
+	console.log(data);
+	
+	let hello;
+	//hello = function(val){return "hello" + val}
+	//hello = (val)=> "hello" + val;
+	hello = val => "hello" + val;
+	let v = hello("aaaa");
+	console.log(v);
+	document.getElementById("demo").innerHTML = hello("방가방가");
+	
+	//매개변수가 2개 이상인 경우
+	//function call(a,b){}
+	//let foo3 = (a,b) => {return a + b};
+	let foo3 = (a,b) => a + b;
+	let v2 = foo3(10,20);
+	console.log(v2)
+	
+	//함수에 여러개의 논리가 포함된다면 { 구현  }
+	let foo4 = (a,b) => {let c = 100; return a+b+c};
+	let v3 = foo4(100,100);
+	console.log(v3)
+	
+	
+	//객체 반환시
+	//함수 객체 return >> {json}
+	let foo5 = () => ({a:1 , b:2 , c:3});
+	let vobj = foo5();
+	console.log(vobj);
+	
+	//즉시 실행 함수 (암기)
+	//jquery 활용이 되요 ^^
+	(
+	  function(){
+		  console.log("즉시 실행 함수 ....");
+		  //함수는 호출에 의해서 실행
+	  }()		
+	);
+	//위 코드를
+	//화살표 표현식으로 바꾸어 보세요
+	(
+	  ()=>{console.log("즉시 실행 함수 ....")}
+		  //함수는 호출에 의해서 실행
+	 )();
+	
+	//Array 가 가지고 있는 다양한 함수 
+	//https://www.w3schools.com/jsref/jsref_obj_array.asp
+	
+	/*
+	암기(초급자)
+	1. for(let i = 0; i < 10 ; i++){}
+	2. for(let index in Array){ Array[index]}
+	2.1 for(let value of Array){value}
+	
+	객체도 (json) 배열 (JAVA : Map)
+	JSON : {a:1 , b:2 , c:3}  >> for 문 사용 
+	3. for(let key in Object){객체[key] >> 1 } 
+	3.1 객체 접근 : let obj ={a:1} >> obj.a >> 1
+	
+	추가적으로 
+	Array.isArray()
+	4. Array.forEach(function(value,index,array){})
+	5. Array.map()
+	*/
+	//<p id="demo2"></p>
+	function myFunc(){
+		let data = ["A","B","C","D"];
+		let x = document.getElementById("demo2");
+		x.innerHTML = Array.isArray(data);//true, false
+	}
+	//함수 호출
+	myFunc();
+	
+	let txt="";
+	let numbers = [45,4,9,16,25];
+	
+	//니가 가지고 있는 배열의 개수 만큼 반복할 꺼야 ....
+	//호출 되었을때 parameter 를 통해서 정보를 얻어요 
+	//array.forEach(function(currentValue, index, arr), thisValue)
+	function myFunc2(value,index,array){
+		txt ="(" + value + ")" + "[" + index + "]" + "[" + array + "]";
+		console.log(txt);
+	}
+	
+	numbers.forEach(myFunc2); //callback , 재귀
+	
+	
+	//let numbers = [45,4,9,16,25];
+	//https://www.w3schools.com/jsref/jsref_map.asp
+	
+	//[45,4,9,16,25]; 원배열 
+	let numbermap = numbers.map(myFunc3); //[새로운 배열] .... [조작]할거야 >> 새배열 
+	function myFunc3(value , index , array){
+		return value * 2; // 배열 생성 ... [45*2][4*2][][][]
+	}
+	console.log(numbermap);
+	////기본//////
+	
+	//응용하기//
+	//화살표 함수 와  Array 함수
+	
+	let evens = [2,4,6,8];
+	let odds = evens.map(value=>value+1); //function(value){return value + 1}
+	console.log(odds); //[3,5,7,9] 생성
+	
+	//function(value,index){return value + index}
+	let nums = evens.map((value,index)=> value+index);
+	console.log(nums); //[2,5,8,11]
+	
+	
+	let arr =[];
+	evens.forEach(value=>{
+		if(value % 2 === 0){
+			arr.push(value);
+		}
+	});
+	console.log(arr);
+	</script>
 </html>
