--- a/Team2_Task/BootStrap/myBootstrap/index.html
+++ b/Team2_Task/BootStrap/myBootstrap/index.html
@@ -74,7 +74,7 @@
                         <p class="text-faded mb-0">사람들과 쉽게 어울리며 협업합니다!</p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-heart"></i></span>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-bulb"></i></span>
                         <h4><strong>Ambitious</strong></h4>
                         <p class="text-faded mb-0">야심과 욕심을 가진 개발자입니다.</p>
                     </div>
@@ -88,7 +88,7 @@
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-mustache"></i></span>
+                        <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-cat"></i></span>
                         <h4><strong>Brave</strong></h4>
                         <p class="text-faded mb-0">새로운 분야와 지식을 접하는데에 <br>
                             두려움이 없습니다!
