--- a/Team2_Task/BootStrap/myBootstrap/index.html
+++ b/Team2_Task/BootStrap/myBootstrap/index.html
@@ -52,9 +52,10 @@
                             learning 
                             <img src="https://img.shields.io/badge/java-007396?style=for-the-badge&logo=java&logoColor=white"> 
                             <img src="https://img.shields.io/badge/javascript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"> 
+                            <img src="https://img.shields.io/badge/oracle-F80000?style=for-the-badge&logo=oracle&logoColor=white">
                             <img src="https://img.shields.io/badge/html5-E34F26?style=for-the-badge&logo=html5&logoColor=white"> 
                             <img src="https://img.shields.io/badge/css-1572B6?style=for-the-badge&logo=css3&logoColor=white"> 
-                            SQL<br>
+                            <br>
                             studied Food & Nutrition<br>
                             fond of 💚 🌰 🌙 ✈️ 🌼 👩‍🍳<br><br>
                             always doing my best!
@@ -186,7 +187,7 @@
                         <a class="social-link rounded-circle text-white" href="https://github.com/HiImJenna"><i class="icon-social-github"></i></a>
                     </li>
                 </ul>
-                <p class="text-muted small mb-0">Copyright &copy; Your Website 2022</p>
+                <p class="text-muted small mb-0">Copyright &copy; Welcome to Jenna 2022</p>
             </div>
         </footer>
         <!-- Scroll to Top Button-->
