--- a/WEB/22.11.02_DAY51/WebBasic_JavaScript_Jquery_Ajax/Ex07_External_API_ajax.html
+++ b/WEB/22.11.02_DAY51/WebBasic_JavaScript_Jquery_Ajax/Ex07_External_API_ajax.html
@@ -22,15 +22,17 @@
 		  $('#btn').click(function(){
 			 const flickerAPI = "https://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?" 
 			 //tags=raccoon&tagmode=any&format=json
-			 const a={tags:$('#search').val() ,tagmode:"any" ,format:"json"}
+			 const data = { tags:$('#search').val(),
+			 				tagmode:"any",
+							format:"json"}
 			 console.log(data);
-			 $.getJSON(flickerAPI,a,function(data,textStatus,xhr){
+			 $.getJSON(flickerAPI,data,function(data,textStatus,xhr){
 				  //console.log(data);
 				  //console.log(textStatus);
 				  //console.log(xhr.readyState);
 				  
 				  $('#images').empty();
-				  $.each(a.items, function(index,obj){
+				  $.each(data.items, function(index,obj){
 					 $('<img>').attr("src",obj.media.m).appendTo("#images");
 					 //img 태그를 생성하고 src 속성에 이미지 경로 설정 div append
 				  });
